# Pinad

./: README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: python-package.yml  python-publish.yml
src/pinad/: __init__.py  maybe.py  state.py
tests/: test_maybe.py
