[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pinad"]

[project]
name = "pinad"
version = "0.0.3a"
authors = [
  { name="Robert DeRienzo", email="rlderienzo@gmail.com" },
]
description = "Adds a collection of common monads to python."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/RobertLD/Pinad"
Issues = "https://github.com/RobertLD/Pinad/issues"